Add javadoc Fix test and Add filter