@@ -1,8 +1,5 @@
 package org.example.webshop.Service;
 
-import static org.mockito.Mockito.*;
-import static org.junit.jupiter.api.Assertions.*;
-
 import org.example.webshop.model.Category;
 import org.example.webshop.repository.CategoryRepository;
 import org.example.webshop.service.CategoryService;
@@ -12,9 +9,12 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 class CategoryServiceTest {
 
@@ -28,44 +28,61 @@ class CategoryServiceTest {
     void setUp() {
         MockitoAnnotations.openMocks(this);
     }
+
     @Test
-    void retrievesAllCategories() {
-        List<Category> categories = Arrays.asList(new Category(), new Category());
+    void getAllReturnsAllCategories() {
+        // Arrange
+        List<Category> categories = List.of(new Category(), new Category());
         when(categoryRepository.findAll()).thenReturn(categories);
 
+        // Act
         List<Category> result = categoryService.getAll();
 
+        // Assert
         assertNotNull(result);
         assertEquals(2, result.size());
         verify(categoryRepository, times(1)).findAll();
     }
+
     @Test
-    void retrievesCategoryByIdWhenExists() {
+    void getByIdReturnsCategoryIfExists() {
+        // Arrange
+        UUID id = UUID.randomUUID();
         Category category = new Category();
-        when(categoryRepository.findById(1)).thenReturn(Optional.of(category));
+        when(categoryRepository.findById(id)).thenReturn(Optional.of(category));
 
-        Category result = categoryService.getById(1);
+        // Act
+        Category result = categoryService.getById(id);
 
+        // Assert
         assertNotNull(result);
-        verify(categoryRepository, times(1)).findById(1);
+        assertEquals(category, result);
+        verify(categoryRepository, times(1)).findById(id);
     }
+
     @Test
-    void returnsNullWhenCategoryDoesNotExist() {
-        when(categoryRepository.findById(999)).thenReturn(Optional.empty());
+    void getByIdReturnsNullIfNotFound() {
+        // Arrange
+        UUID id = UUID.randomUUID();
+        when(categoryRepository.findById(id)).thenReturn(Optional.empty());
 
-        Category result = categoryService.getById(999);
+        // Act
+        Category result = categoryService.getById(id);
 
+        // Assert
         assertNull(result);
-        verify(categoryRepository, times(1)).findById(999);
+        verify(categoryRepository, times(1)).findById(id);
     }
+
     @Test
-    void retrievesEmptyListWhenNoCategoriesExist() {
-        when(categoryRepository.findAll()).thenReturn(Arrays.asList());
+    void saveCallsRepositorySave() {
+        // Arrange
+        Category category = new Category();
 
-        List<Category> result = categoryService.getAll();
+        // Act
+        categoryService.save(category);
 
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(categoryRepository, times(1)).findAll();
+        // Assert
+        verify(categoryRepository, times(1)).save(category);
     }
 }
